--- a/_config.yml
+++ b/_config.yml
@@ -26,36 +26,54 @@ about_content: |
   
   \
   <mark> Cloud Providers </mark>
-    - AWS - Microsoft Azure - Google Cloud - Scaleway - OVHcloud
+    - AWS -  AZURE - GCP - Scaleway - OVHcloud
 
   \
   <mark> IaC - Automation </mark>
-    - Ansible - Terraform - Pulumi - Packer - Vagrant
-    - Gitlab CI - Github Actions - n8n - Cloud-Init
+    - Ansible - Terraform - Pulumi - n8n - Cloud-Init
+    - Packer - Vagrant - SaltStack
   
   \
-  <mark> Kubernetes ecosystem </mark>
-    - Helm - Kustomize - Vault - Trivy - Istio - Calico - Cilium
-    - Traefik - Nginx Ingress Controller - Rook-Ceph - ArgoCD - Flux
+  <mark> CI/CD </mark>
+    - Gitlab CI - Github Action - ArgoCD - Flux
   
   \
-  <mark> Observability - Monitoring - Alerting </mark>
-    - Opentelemetry - Grafana - Kibana - Alertmanager - Fluentbit - Elasticsearch - Loki
-    - Prometheus - Thanos - APM - jaeger - Tempo - Promtail - Hyperping
+  <mark> Kubernetes - Docker </mark>
+    - Helm - Kustomize  - Istio - Calico - Cilium
+    - Traefik - Nginx Ingress Controller
+    - Rook-Ceph- Dockerfile - Docker compose
   
+  \
+  <mark> Observability </mark>
+    -  Opentelemetry - ELK Stack - Grafana - Prometheus - Thanos
+    -  Fluentbit - APM - Jaeger - Tempo - Promtail - Hyperping
+    - Alertmanager - Datadog
+    
   \
   <mark> Scripting </mark>
-    - Bash - Python - Lua - Node.js
+    -  Bash - Python - Lua
   
   \
   <mark> Databases </mark>
     - MySQL - MariaDB - PostgreSQL - MongoDB
-  
+      
   \
-  <mark> Linux </mark>
-    - Debian - Ubuntu - Arch - Fedora - RedHat - VMWare
-    - Wazuh - RabbitMQ - Redis - Proxmox - Apache - Nginx
-
+  <mark>  Linux OS </mark>
+    -  Debian - Ubuntu - Arch - Fedora - RedHat - Proxmox
+      
+  \
+  <mark> Security </mark>
+    - Wazuh - Vault - Trivy - Sops
+      
+  \
+    <mark> Web </mark>
+    - Apache - Nginx - HAProxy
+      
+  \
+    <mark> Others </mark>
+    -  Git - RabbitMQ - Redis - Ollama - IA coding assistants
+      
+  \
 content:
   - title: Certifications 
     layout: text
